CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/batchsit_t_fiscal_rate__x.object-meta.xml
<CustomObject>
    <description>batchsit$t_fiscal_rate</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_fiscal_rate</externalName>
    <label>batchsit$t_fiscal_rate</label>
    <pluralLabel>batchsit$t_fiscal_rate</pluralLabel>
</CustomObject>