CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/amt_cty__c.field-meta.xml
<CustomField>
    <fullName>amt_cty__c</fullName>
    <description>amt_cty</description>
    <externalDeveloperName>amt_cty</externalDeveloperName>
    <label>County Ceiling Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>