CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/amt_fa__c.field-meta.xml
<CustomField>
    <fullName>amt_fa__c</fullName>
    <description>amt_fa</description>
    <externalDeveloperName>amt_fa</externalDeveloperName>
    <label>Fiscal Agreement Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>