CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/amt_provr__c.field-meta.xml
<CustomField>
    <fullName>amt_provr__c</fullName>
    <description>amt_provr</description>
    <externalDeveloperName>amt_provr</externalDeveloperName>
    <label>Provider Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>