CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/cde_age_group__c.field-meta.xml
<CustomField>
    <fullName>cde_age_group__c</fullName>
    <description>cde_age_group</description>
    <externalDeveloperName>cde_age_group</externalDeveloperName>
    <label>Age Group</label>
    <length>3</length>
    <type>Text</type>
</CustomField>