CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/cde_care_unit__c.field-meta.xml
<CustomField>
    <fullName>cde_care_unit__c</fullName>
    <description>cde_care_unit</description>
    <externalDeveloperName>cde_care_unit</externalDeveloperName>
    <label>Care Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>