CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/cde_rate_type__c.field-meta.xml
<CustomField>
    <fullName>cde_rate_type__c</fullName>
    <description>cde_rate_type</description>
    <externalDeveloperName>cde_rate_type</externalDeveloperName>
    <label>Rate Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>