CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/idn_fiscal_rate__c.field-meta.xml
<CustomField>
    <fullName>idn_fiscal_rate__c</fullName>
    <description>idn_fiscal_rate</description>
    <externalDeveloperName>idn_fiscal_rate</externalDeveloperName>
    <label>idn_fiscal_rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>