CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/idn_fiscal_sch__c.field-meta.xml
<CustomField>
    <fullName>idn_fiscal_sch__c</fullName>
    <description>idn_fiscal_sch</description>
    <externalDeveloperName>idn_fiscal_sch</externalDeveloperName>
    <label>idn_fiscal_sch</label>
    <length>18</length>
    <referenceTargetField>T_FISCAL_SCH__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_FISCAL_SCH__c</referenceTo>
    <relationshipLabel>batchsit$t_fiscal_rate</relationshipLabel>
    <relationshipName>batchsit_t_fiscal_rate</relationshipName>
    <type>IndirectLookup</type>
</CustomField>