CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/lastmodifiedbyid__c.field-meta.xml
<CustomField>
    <fullName>lastmodifiedbyid__c</fullName>
    <description>lastmodifiedbyid</description>
    <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
    <label>lastmodifiedbyid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>