CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <description>name</description>
    <externalDeveloperName>name</externalDeveloperName>
    <label>name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>