CHATS_SIT/force-app/main/default/objects/batchsit_t_fiscal_rate__x/fields/rate_schedule__c.field-meta.xml
<CustomField>
    <fullName>rate_schedule__c</fullName>
    <description>rate_schedule</description>
    <externalDeveloperName>rate_schedule</externalDeveloperName>
    <label>rate_schedule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>